fix(Dropdown): Use a wrapping element to fix the styling bug instead

--- a/react/Dropdown/Dropdown.less
+++ b/react/Dropdown/Dropdown.less
@@ -61,7 +61,7 @@
   border: 0;
   padding: 0 @field-gutter-width;
   background-color: transparent;
-  display: flex !important;
+  display: flex;
   align-items: center;
   pointer-events: none;
   color: @sk-black;
